name:                idris-python
Version:             0.0.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
Author:              Matus Tejiscak
Maintainer:	     Matus Tejiscak <ziman@functor.sk>
build-type:          Simple
cabal-version:       >=1.10


executable idris-codegen-python
  main-is:        Main.hs
  hs-source-dirs: src
  build-depends:  idris
                , base
                , containers
                , directory
                , filepath
                , haskeline >= 0.7
                , mtl
                , transformers
                , text

  other-modules:    IRTS.CodegenPython

  if os(linux)
     cpp-options:   -DLINUX
     build-depends: unix < 2.8
  if os(freebsd)
     cpp-options:   -DFREEBSD
     build-depends: unix < 2.8
  if os(dragonfly)
     cpp-options:   -DDRAGONFLY
     build-depends: unix < 2.8
  if os(darwin)
     cpp-options:   -DMACOSX
     build-depends: unix < 2.8
  if os(windows)
     cpp-options:   -DWINDOWS
     build-depends: Win32 < 2.4


  ghc-prof-options: -auto-all -caf-all
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -funbox-strict-fields
  default-language: Haskell2010